--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
   },
   "resolutions": {
     "@vitejs/plugin-react-swc": "3.5.0",
-    "@swc/core": "1.3.96"
+    "@swc/core": "1.3.96",
+    "web-ext/sign-addon": "6.4.0",
+    "web-ext/jose": "5.2.3"
   }
 }
